# GoPi5Go

./: .gitignore  LICENSE  PROJECT_IDEAS.md  README.md  SETUP.md  aruco_camera.launch.py  reboot.sh  shutdown.sh  status.sh
Graphics/: x
config/: RTC.README.md  SETUP.md  add_to_boot_firmware_config_dot_txt.txt  add_to_home_pi_dot_bashrc.txt  append_to_etc_sysctl.conf_to_disable_ipv6.txt  crontab-e  daveData.json  disable_ipv6.sh  etc_sysctl.conf.ipv6_disabled  etc_systemd_system.gp5g_power.service  etc_systemd_system.ip_feedback.service  get_dexter_software.sh  gopi5go_power.py  gp5g_power.sh  gpg3_config.json  gpg3_config.json.bak  install_gp5g_power_service.sh  install_ip_feedback_service.sh  setup_tune2fs.sh
config/docker/: 2_install_docker_pkgs.sh  7_build_gopi5gor2hdp.sh  README.md  SETUP_YDLidar_X4.md  build_GoPi5Go_API.sh  build_ina219_wheel.sh  delete_gopi5gor2hdp_image.sh  (+10 more)
plib/: battery.py  cleanlifelog.py  daveDataJson.py  leds.py  lifeLog.py  loglife.py  myPyLib.py  noinit_easygopigo3.py  odomLog.py  pydocking.py  safetyShutdown.py  speak.py  status.py
ros2ws/: README.md  aruco_camera.launch.py  attach_to_gopi5goROS2.sh  check_battery.sh  clean.sh  create_node_in_pkg.sh  display_to_goPi5GoROS2.sh  kill_docker_gopi5goROS2.sh  monitor.sh  obsolete_run_detached_ydlidarROS2.sh  rebuild.sh  restart_docker_detached_gopi5goROS2.sh  run_detached_gopi5goROS2.sh  run_docker_bash_gopi5goROS2.sh  run_docker_detached_gopi5goROS2.sh  run_gopi5gor2hdp.sh  run_r2hdp.sh  ss.sh  start_GoPi5Go-Dave.sh  status.sh  stop_robot.sh  stop_slam_toolbox.sh  term_to_goPi5GoROS2.sh  totalTravel.sh  versions.sh
ros2ws/src/explorer_wanderer/: README.md  package.xml  setup.py
ros2ws/src/explorer_wanderer/explorer_wanderer/: wanderer.py
saved/: 2024-03-19_life.log_32-bit_Final  2024-11-12_life.log_GoPi5Go-Dave_Final  2024-11-12_odometer.log.final  2024-11-12_speak.log.final  2025-01-27_totallife.txt  daveData.json.FINAL  odometer.log.2024-04-04
systests/: README.md
systests/battery/: CMakeLists.txt  README.md  package.xml  plotBattLife.py
systests/battery/csv/: 2024-03-21_batteryLife.csv  2024-04-02_batteryLife.csv
systests/battery/include/: EasyGoPiGo3.h
systests/battery/src/: EasyGoPiGo3.cpp  batteryLife.cpp
systests/chatgpt_cpp_easygopigo3/: CMakeLists.txt  README.md  egpgtest  package.xml
systests/chatgpt_cpp_easygopigo3/include/: EasyGoPiGo3.h  chatgpt_easygopigo3.h
systests/chatgpt_cpp_easygopigo3/src/: EasyGoPiGo3.cpp  MyEasyGoPiGo3.cpp  chatgpt_easygopigo3.cpp
utils/: backup_gpg3_config.sh  check_filesys_for_read_only.sh  checkout_file_overwrite.sh  last_fsck.sh  logBattery.sh  logMaintenance.py  mod_daveDataJson.py  monitor.sh  nap_pi5_for.sh  newBattery.py  nohup_cleanlifelog.sh  nohup_loglife.sh  nohup_pydocking.sh  nohup_safetyShutdown.sh  nohup_test_docking.sh  print_daveDataJson.py  py-file-index.py  replace_string_in_multiple_files.sh  set_vol_100_pct.sh  set_vol_40_pct.sh  set_vol_80_pct.sh  set_vol_normal.sh  set_vol_off.sh  set_vol_shout.sh  set_vol_very_very_low.sh  totallife.sh  update_upgrade.sh  what_uses.sh  wifi_led_off.sh
(+354 files in other folders)
