<?xml version="1.0"?>
<package format="2">
  <name>easygopigo3_cpp</name>
  <version>0.0.1</version>
  <description>C++ EasyGoPiGo3 for GoPi5Go3</description>

  <maintainer email="slowrunner@noreply.github.com">slowrunner</maintainer>

  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>cmake</build_type>
  </export>
</package>
