<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>explorer_wanderer</name>
  <version>0.0.1</version>
  <description>ROS 2 Wander using scan topic for obstacle avoidance.  REF: https://github.com/DaniGarciaLopez/ros2_explorer/tree/main</description>
  <maintainer email="slowrunner@noreply.users.github.com">slowrunner</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
